--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'org.koin:koin-android:2.2.2'
-    implementation 'org.koin:koin-android-viewmodel:2.2.2'
-    implementation 'org.koin:koin-androidx-scope:2.2.2'
+    // Koin AndroidX Scope features
+    implementation 'io.insert-koin:koin-androidx-scope:2.2.3'
+    // Koin AndroidX ViewModel features
+    implementation 'io.insert-koin:koin-androidx-viewmodel:2.2.3'
+    // Koin AndroidX Fragment features
+    implementation 'io.insert-koin:koin-androidx-fragment:2.2.3'
+    // Koin AndroidX Experimental features
+    implementation 'io.insert-koin:koin-androidx-ext:2.2.3'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
@@ -56,6 +61,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 
     implementation"org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+
+    debugImplementation 'com.github.ChuckerTeam.Chucker:library:3.5.2'
 
 
 }
